<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.pds.ipcclient.ui.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/say_something_to_server"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/edt_externalRef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salut"
        android:textAlignment="center"
        android:inputType="number"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/tv_externalRef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="35sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/create_via_messenger"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_getStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/getStatus_via_messenger"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_via_messenger"
            android:textSize="18sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_layout_client_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/process_id_of_server"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/txt_server_pid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NN"
                android:textSize="40sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/connection_count_of_server"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/txt_server_connection_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NN"
                android:textSize="40sp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>